{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 280,
  "lineage": "b0dc3e61-5e35-ec06-ca49-060460063fe3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b0419ddb7191fc870",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-b0419ddb7191fc870",
            "association_id": "eipassoc-3b99c2166dd853ade",
            "domain": "vpc",
            "id": "eipalloc-b0419ddb7191fc870",
            "network_interface": "eni-44490447582fbdd22",
            "private_dns": "ip-10-113-20-195.ec2.internal",
            "private_ip": "10.113.20.195",
            "public_dns": "ec2-127-5-190-79.compute-1.amazonaws.com",
            "public_ip": "127.5.190.79",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-bae6ee20a146f1ccc",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-bae6ee20a146f1ccc",
            "association_id": "eipassoc-08d68998529370f7b",
            "domain": "vpc",
            "id": "eipalloc-bae6ee20a146f1ccc",
            "network_interface": "eni-dd73429661073738d",
            "private_dns": "ip-10-82-136-48.ec2.internal",
            "private_ip": "10.82.136.48",
            "public_dns": "ec2-127-40-157-102.compute-1.amazonaws.com",
            "public_ip": "127.40.157.102",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000001",
            "arn": "arn:aws:ec2:us-east-1::instance/i-8c30f64032e7a2323",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-8c30f64032e7a2323",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-3edd406fd0dd8c4b9"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-3edd406fd0dd8c4b9",
            "private_dns": "ip-10-0-0-172.ec2.internal",
            "private_ip": "10.0.0.172",
            "public_dns": "ec2-172-21-0-46.localhost.localstack.cloud",
            "public_ip": "172.21.0.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-82cf86f295e414cf3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e5da14439db2a6a43",
            "tags": {
              "Name": "app-dev-frontend-instance",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-frontend-instance",
              "application": "app",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000001",
            "arn": "arn:aws:ec2:us-east-1::instance/i-1da99786130b8f363",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-1da99786130b8f363",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-9ee7d7017571b5373"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-9ee7d7017571b5373",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-172-21-0-47.localhost.localstack.cloud",
            "public_ip": "172.21.0.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-5e8cbd595b859c176",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1c7b695f158637a83",
            "tags": {
              "Name": "app-dev-frontend-instance",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-frontend-instance",
              "application": "app",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-b85cce461eb12b53b",
            "id": "igw-b85cce461eb12b53b",
            "owner_id": "000000000000",
            "tags": {
              "Name": "app-dev-internet-gateway",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-internet-gateway",
              "application": "app",
              "environment": "dev"
            },
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/app-dev-frontend/0afbe6f406425592",
            "arn_suffix": "app/app-dev-frontend/0afbe6f406425592",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-dev-frontend.elb.localhost.localstack.cloud",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/app-dev-frontend/0afbe6f406425592",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-dev-frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-57aa86d8b11fdf073"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1c7b695f158637a83"
              },
              {
                "subnet_id": "subnet-e5da14439db2a6a43"
              }
            ],
            "subnets": [
              "subnet-1c7b695f158637a83",
              "subnet-e5da14439db2a6a43"
            ],
            "tags": {
              "Name": "app-dev-frontend-lb",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-frontend-lb",
              "application": "app",
              "environment": "dev"
            },
            "vpc_id": "vpc-c581e0a1cdccb47c0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7EXAMPLE"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/app-dev-frontend/0afbe6f406425592/f7d747efb29df8ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/app-dev-frontend-http/dfa460541949b097",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/app-dev-frontend/0afbe6f406425592/f7d747efb29df8ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/app-dev-frontend/0afbe6f406425592",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_security_group.frontend_lb",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/app-dev-frontend-http/dfa460541949b097",
            "arn_suffix": "targetgroup/app-dev-frontend-http/dfa460541949b097",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/app-dev-frontend-http/dfa460541949b097",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/app-dev-frontend/0afbe6f406425592"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-dev-frontend-http",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/app-dev-frontend-http/dfa460541949b097-20260318203410244300000003",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/app-dev-frontend-http/dfa460541949b097",
            "target_id": "i-8c30f64032e7a2323"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/app-dev-frontend-http/dfa460541949b097-20260318203410259400000004",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/app-dev-frontend-http/dfa460541949b097",
            "target_id": "i-1da99786130b8f363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b0419ddb7191fc870",
            "association_id": "eipassoc-3b99c2166dd853ade",
            "connectivity_type": "public",
            "id": "nat-ce863984976360c52",
            "network_interface_id": "eni-44490447582fbdd22",
            "private_ip": "10.113.20.195",
            "public_ip": "127.5.190.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-aa4e35e28a8939606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-bae6ee20a146f1ccc",
            "association_id": "eipassoc-08d68998529370f7b",
            "connectivity_type": "public",
            "id": "nat-83f8b7b7af5df8574",
            "network_interface_id": "eni-dd73429661073738d",
            "private_ip": "10.82.136.48",
            "public_ip": "127.40.157.102",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d8857db9c9d0363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-3edd406fd0dd8c4b9",
            "attachment": [
              {
                "attachment_id": "eni-attach-b14d0f8cc04abadde",
                "device_index": 0,
                "instance": "i-21029225223a7603b"
              }
            ],
            "id": "eni-3edd406fd0dd8c4b9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:20502x:8702x:13902x",
            "owner_id": "000000000000",
            "private_ip": "10.0.0.172",
            "private_ip_list": [
              "10.0.0.172"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.172"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-be20e228ef1615f14"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e5da14439db2a6a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-9ee7d7017571b5373",
            "attachment": [
              {
                "attachment_id": "eni-attach-afe96eadcf030e069",
                "device_index": 0,
                "instance": "i-b967948314c6e9125"
              }
            ],
            "id": "eni-9ee7d7017571b5373",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:16902x:20502x:11702x",
            "owner_id": "000000000000",
            "private_ip": "10.0.1.55",
            "private_ip_list": [
              "10.0.1.55"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.55"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-be20e228ef1615f14"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1c7b695f158637a83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-f70a7a51f13f4de0c",
            "id": "rtb-f70a7a51f13f4de0c",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-ce863984976360c52",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-9b3e2eb3cd2993e53",
            "id": "rtb-9b3e2eb3cd2993e53",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-83f8b7b7af5df8574",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-b10ee21fdfd3bd641",
            "id": "rtb-b10ee21fdfd3bd641",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-b85cce461eb12b53b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-9911e9d4aaed1960b",
            "route_table_id": "rtb-f70a7a51f13f4de0c",
            "subnet_id": "subnet-aa4e35e28a8939606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fba88723e30a341",
            "route_table_id": "rtb-9b3e2eb3cd2993e53",
            "subnet_id": "subnet-05d8857db9c9d0363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-89bcd5a4277cc4e9d",
            "route_table_id": "rtb-b10ee21fdfd3bd641",
            "subnet_id": "subnet-e5da14439db2a6a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-8318d429457cbbdc1",
            "route_table_id": "rtb-b10ee21fdfd3bd641",
            "subnet_id": "subnet-1c7b695f158637a83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-57aa86d8b11fdf073",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5000
              }
            ],
            "id": "sg-57aa86d8b11fdf073",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-dev-frontend-lb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_lb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-2290480155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-57aa86d8b11fdf073",
            "security_group_rule_id": "sgr-c432a284d8d6eb82a",
            "self": false,
            "source_security_group_id": "sg-57aa86d8b11fdf073",
            "timeouts": null,
            "to_port": 5000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_lb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3196250267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-57aa86d8b11fdf073",
            "security_group_rule_id": "sgr-888a229b63da4d9a2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-aa4e35e28a8939606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-aa4e35e28a8939606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-dev-private-subnet",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-private-subnet",
              "application": "app",
              "environment": "dev"
            },
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-05d8857db9c9d0363",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d8857db9c9d0363",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-dev-private-subnet",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-private-subnet",
              "application": "app",
              "environment": "dev"
            },
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-e5da14439db2a6a43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-e5da14439db2a6a43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-dev-public-subnet",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-public-subnet",
              "application": "app",
              "environment": "dev"
            },
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-1c7b695f158637a83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-1c7b695f158637a83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-dev-public-subnet",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-public-subnet",
              "application": "app",
              "environment": "dev"
            },
            "vpc_id": "vpc-c581e0a1cdccb47c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-c581e0a1cdccb47c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-dfc2a4ab838563756",
            "default_route_table_id": "rtb-a2d0d50900d93547a",
            "default_security_group_id": "sg-be20e228ef1615f14",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-c581e0a1cdccb47c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-a2d0d50900d93547a",
            "owner_id": "000000000000",
            "tags": {
              "Name": "app-dev-vpc-network",
              "application": "app",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "app-dev-vpc-network",
              "application": "app",
              "environment": "dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}